# aia

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/: __init__.py  agent.py
src/core/: __init__.py  action.py  environment.py  memory.py
src/language/: __init__.py  base.py  function.py
src/llm/: __init__.py  client.py  prompt.py
src/registery/: __init__.py  action_registery.py  registry.py
src/registry/: __init__.py  decorators.py
