[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aia"
version = "0.1.0"
description = "A modular Python framework for building AI agents with function calling capabilities, goal-oriented behavior, and memory management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AIA Framework Contributors", email = "recepdemiric.14@gmail.com"}
]
maintainers = [
    {name = "AIA Framework Contributors", email = "recepdemiric.14@gmail.com"}
]
keywords = ["ai", "agents", "llm", "function-calling", "automation", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.0.0",
]
all = [
    "aia[dev,jupyter]"
]

[project.urls]
Homepage = "https://github.com/recepdemrci/aia"
Repository = "https://github.com/recepdemrci/aia.git"
Documentation = "https://github.com/recepdemrci/aia#readme"
"Bug Tracker" = "https://github.com/recepdemrci/aia/issues"

[tool.setuptools]
packages = ["aia", "aia.core", "aia.language", "aia.llm", "aia.registry"]

[tool.setuptools.package-dir]
"aia" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
